# kafeido-sdk

./: .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
examples/: async_example.py  chat_completion.py  chat_streaming.py  check_model_status.py  list_models.py  migration_from_openai.py  ocr_extract.py  streaming_transcription.py  transcribe_audio.py  tts_speech.py  vision_analyze.py  wait_for_ready.py
kafeido/: __init__.py  _async_client.py  _auth.py  _http_client.py  _streaming.py  _streaming_transcription.py  _warmup.py  client.py  version.py
kafeido/resources/: __init__.py  _async_audio.py  _async_chat.py  _async_files.py  _async_jobs.py  _async_models.py  _async_ocr.py  _async_vision.py  audio.py  chat.py  files.py  jobs.py  models.py  ocr.py  vision.py
kafeido/types/: __init__.py  audio.py  chat.py  errors.py  files.py  health.py  jobs.py  models.py  ocr.py  tts.py  vision.py
tests/: conftest.py  test_audio.py  test_chat.py  test_health.py  test_jobs.py  test_models.py  test_ocr.py  test_streaming.py  test_streaming_transcription.py  test_tts.py  test_vision.py  test_warmup.py
